# ledger-mob

./: .envrc  .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  SECURITY.md  crates.js  help.html  ledger_app.toml  rust-toolchain  search-index.js  settings.html  source-files.js  src-files.js
.github/: CODEOWNERS
.github/workflows/: rust.yml
apdu/: Cargo.toml
apdu/src/: app_info.rs  digest.rs  helpers.rs  ident.rs  key_image.rs  lib.rs  prelude.rs  random.rs  state.rs  subaddress_keys.rs  wallet_keys.rs
apdu/src/tx/: memo.rs  mod.rs  ring.rs  summary.rs  tx_init.rs
core/: Cargo.toml  build.rs  mob.proto
core/src/: lib.rs
core/src/engine/: digest.rs  error.rs  event.rs  fog.rs  function.rs  ident.rs  mod.rs  output.rs  ring.rs  summary.rs
core/src/helpers/: mod.rs  schnorrkel.rs
core/tests/: helpers.rs  ident.rs  key_image.rs  memo.rs  mlsag.rs  tx.rs
docs/: apdu.md
fw/: .gdbinit  Cargo.toml  build.rs  manifest.json  nanox.json  rust-toolchain
fw/.cargo/: config.toml
fw/docs/: apdu.md
fw/src/: consts.rs  main.rs  platform.rs
fw/src/ui/: address.rs  app_info.rs  approver.rs  complete.rs  helpers.rs  ident_approver.rs  menu.rs  message.rs  mod.rs  progress.rs  settings.rs  sync_approver.rs  tx_blind_approver.rs  tx_summary_approver.rs
implementors/ledger_proto/: trait.ApduReq.js  trait.ApduStatic.js
implementors/ledger_transport/: trait.Exchange.js
implementors/num_enum/: trait.TryFromPrimitive.js
implementors/strum/: trait.IntoEnumIterator.js  trait.VariantNames.js
ledger_mob/: all.html  enum.Error.html  enum.Filter.html  enum.Filters.html  enum.LedgerInfo.html  index.html  sidebar-items.js  struct.DeviceHandle.html  struct.LedgerHandle.html  struct.LedgerInfo.html  struct.LedgerProvider.html  trait.Connect.html  trait.Device.html  trait.Exchange.html  trait.Transport.html  type.GenericHandle.html
ledger_mob/account/: index.html  sidebar-items.js  struct.AccountHandle.html
ledger_mob/error/: enum.Error.html
ledger_mob/handle/: struct.DeviceHandle.html
ledger_mob/transport/: enum.GenericError.html  enum.GenericTransport.html  index.html  sidebar-items.js  struct.TcpOptions.html  struct.TransportNativeHID.html  struct.TransportTcp.html  type.TransportHidError.html  type.TransportTcpError.html
ledger_mob/tx/: index.html  sidebar-items.js  struct.TransactionHandle.html  struct.TxConfig.html
ledger_mob_apdu/: all.html  constant.MOB_APDU_CLA.html  constant.MOB_PROTO_VERSION.html  enum.ApduError.html  enum.Instruction.html  index.html  macro.encdec_bitflags!.html  macro.encdec_bitflags.html  sidebar-items.js  trait.ApduBase.html  trait.ApduCmd.html  trait.ApduReq.html  trait.ApduStatic.html
ledger_mob_apdu/app_info/: index.html  sidebar-items.js  struct.AppFlags.html  struct.AppInfoReq.html  struct.AppInfoResp.html
ledger_mob_apdu/digest/: fn.digest_ring_add_txout.html  fn.digest_ring_init.html  fn.digest_ring_set_blinding.html  fn.digest_ring_sign.html  fn.digest_tx_init.html  fn.digest_tx_set_message.html  fn.digest_tx_sign_memo.html  fn.digest_tx_summary_add_input.html  fn.digest_tx_summary_add_output.html  fn.digest_tx_summary_add_output_unblinding.html  fn.digest_tx_summary_build.html  fn.digest_tx_summary_init.html  index.html  sidebar-items.js
ledger_mob_apdu/ident/: index.html  sidebar-items.js  struct.IdentGetReq.html  struct.IdentResp.html  struct.IdentSignReq.html
ledger_mob_apdu/key_image/: index.html  sidebar-items.js  struct.KeyImageReq.html  struct.KeyImageResp.html
ledger_mob_apdu/prelude/: index.html  sidebar-items.js  struct.AddTxOutFlags.html  struct.TxAddTxOut.html  struct.TxGetKeyImage.html  struct.TxGetResponse.html  struct.TxInit.html  struct.TxKeyImage.html  struct.TxMemoSign.html  struct.TxRingInit.html  struct.TxRingSign.html  struct.TxSetBlinding.html  struct.TxSetMessage.html  struct.TxSummaryAddTxIn.html  struct.TxSummaryAddTxOut.html  struct.TxSummaryAddTxOutUnblinding.html  struct.TxSummaryBuild.html  struct.TxSummaryInit.html  type.TxPrivateKey.html
ledger_mob_apdu/random/: index.html  sidebar-items.js  struct.RandomReq.html  struct.RandomResp.html
ledger_mob_apdu/state/: enum.TxState.html  index.html  sidebar-items.js  struct.Digest.html  struct.TxStateIter.html
ledger_mob_apdu/subaddress_keys/: index.html  sidebar-items.js  struct.SubaddressKeyReq.html  struct.SubaddressKeyResp.html
ledger_mob_apdu/tx/: constant.FOG_IDS.html  enum.FogId.html  index.html  sidebar-items.js  struct.AddTxInFlags.html  struct.AddTxOutFlags.html  struct.AddTxOutUnblindingFlags.html  struct.Tx.html  struct.TxAddTxOut.html  struct.TxComplete.html  struct.TxGetKeyImage.html  struct.TxGetResponse.html  struct.TxHeader.html  struct.TxInfo.html  struct.TxInfoReq.html  struct.TxInit.html  struct.TxKeyImage.html  (+17 more)
ledger_mob_cli/: all.html  enum.Actions.html  fn.execute.html  fn.main.html  fn.read_input.html  fn.write_output.html  index.html  opaque..html  sidebar-items.js  struct.Options.html
ledger_mob_core/: all.html  index.html  sidebar-items.js  struct.TokenId.html
ledger_mob_tests/: all.html  enum.Error.html  index.html  sidebar-items.js
ledger_sim/: all.html  enum.Action.html  enum.Button.html  enum.Display.html  enum.DriverMode.html  enum.GenericDriver.html  enum.GenericHandle.html  enum.Model.html  index.html  sidebar-items.js  struct.DockerDriver.html  struct.DockerHandle.html  struct.LocalDriver.html  struct.LocalHandle.html  struct.Options.html  trait.Driver.html  trait.Handle.html
lib/: Cargo.toml
lib/src/: account.rs  error.rs  handle.rs  lib.rs  transport.rs
lib/src/cli/: helpers.rs  main.rs
lib/src/tx/: key_image.rs  memo.rs  mod.rs  ring.rs  subaddress.rs  summary.rs
lib/tests/: helpers.rs  ident.rs  memo.rs  mlsag.rs  subaddress_keys.rs  tx.rs  wallet_keys.rs  wallet_keys.toml
sim/: Cargo.toml
sim/src/: handle.rs  lib.rs  main.rs
sim/src/drivers/: docker.rs  local.rs  mod.rs
tests/: Cargo.toml
tests/src/: ident.rs  key_image.rs  lib.rs  main.rs  memo.rs  mlsag.rs  subaddress.rs  transaction.rs  wallet.rs
tests/vectors/: tx1.json  tx2.json  tx3.json  tx4.json
(+227 files in other folders)
