cargo-features = ["per-package-target"]

[workspace]

members = [
    "apdu",
    "core",
    "lib",
    "tests",
]

# NOTE: something breaks in target detection if fw is included
# which _should_ be okay with [`per-packet-target`](https://doc.rust-lang.org/cargo/reference/unstable.html#per-package-target) but...
# TODO: non-critical but, work out why
exclude = [
    "fw",
    "vendor/mob",
    "vendor/sdk",
    "vendor/ui",
    "vendor/rs/ledger-apdu",
    "vendor/rs/ledger-transport",
    "vendor/rs/ledger-transport-hid",
    "vendor/rs/ledger-transport-tcp",
    "vendor/rs/ledger-transport-zemu",
]


[profile.test]
overflow-checks = true

[profile.release]
overflow-checks = true

[patch.crates-io]

# Fix issues with recent nightlies, bump curve25519-dalek version
x25519-dalek = { git = "https://github.com/mobilecoinfoundation/x25519-dalek.git", rev = "4fbaa3343301c62cfdbc3023c9f485257e6b718a" }

# Fork and rename to use "OG" dalek-cryptography with latest dependencies.
bulletproofs-og = { git = "https://github.com/mobilecoinfoundation/bulletproofs.git", rev = "9abfdc054d9ba65f1e185ea1e6eff3947ce879dc" }

# Fork and rename to use "OG" dalek-cryptography.
schnorrkel-og = { git = "https://github.com/mobilecoinfoundation/schnorrkel", rev = "049bf9d30f3bbe072e2ad1b5eefdf0f3c851215e" }

mc-account-keys = { path = "./vendor/mob/account-keys" }
mc-api = { path = "./vendor/mob/api" }
mc-core = { path = "./vendor/mob/core" }
mc-crypto-digestible = { path ="./vendor/mob/crypto/digestible" }
mc-crypto-hashes = { path ="./vendor/mob/crypto/hashes" }
mc-crypto-keys = { path ="./vendor/mob/crypto/keys" }
mc-crypto-memo-mac = { path ="./vendor/mob/crypto/memo-mac" }
mc-crypto-ring-signature = { path ="./vendor/mob/crypto/ring-signature" }
mc-crypto-ring-signature-signer = { path ="./vendor/mob/crypto/ring-signature/signer" }
mc-fog-sig-authority = { path = "./vendor/mob/fog/sig/authority" }
mc-transaction-core = { path = "./vendor/mob/transaction/core" }
mc-transaction-extra = { path = "./vendor/mob/transaction/extra" }
mc-transaction-types = { path = "./vendor/mob/transaction/types" }
mc-transaction-signer = { path = "./vendor/mob/transaction/signer" }
mc-transaction-summary = { path = "./vendor/mob/transaction/summary" }
mc-util-from-random = { path = "./vendor/mob/util/from-random" }
mc-util-test-helper = { path = "./vendor/mob/util/test-helper" }
mc-util-serial = { path = "./vendor/mob/util/serial" }

# patched to support ledger required 1.67.0 MSRV
mc-rand = { path = "./vendor/mc-rand" }
