cargo-features = ["per-package-target"]

[package]
name = "ledger-mob-apdu"
description = "MobileCoin hardware wallet protocol / APDU definitions"
repository = "https://github.com/mobilecoinofficial/ledger-mob.git"
version = "0.16.0"
edition = "2021"
license = "Apache-2.0"
publish = false

default-target = "x86_64-unknown-linux-gnu"

[features]
alloc = [ "mc-transaction-types/alloc" ]
default = [
    "alloc",
]

[dependencies]
num_enum = { version = "0.5.7", default_features = false }
bitflags = "1.3.2"
byteorder = { version = "1.4.3", default_features = false }
zeroize = { version = "1.5", default_features = false }
log = { version = "0.4.17", default_features = false, optional = true }
heapless = { version = "0.8.0", default_features = false }
rand_core = { version = "0.6.4", default_features = false, features = [ "getrandom" ] }
strum = { version = "0.24.1", default_features = false, features = [ "derive" ] }
encdec = { version = "0.9.0", default_features = false }

curve25519-dalek = { version = "4.0.0-rc.1", default_features = false }
sha2 = { version = "0.10.6", default_features = false }

ledger-proto = { version = "0.1.0", default_features = false }

mc-core = { version = "6", default_features = false, features = [ "internals" ] }
mc-crypto-digestible = { version = "6", default_features = false }
mc-crypto-keys = { version = "6", default_features = false }
mc-crypto-ring-signature = { version = "6", default_features = false }
mc-transaction-types = { version = "6", default_features = false }
mc-util-from-random = { version = "6", default_features = false }


[dev-dependencies]
rand = "0.8.5"
log = "0.4.17"
simplelog = { version = "0.12.0", default_features = false }
