cargo-features = ["per-package-target"]

[package]
name = "ledger-mob-core"
description = "MobileCoin hardware wallet engine"
repository = "https://github.com/mobilecoinofficial/ledger-mob.git"
version = "0.16.2"
edition = "2021"
license = "GPL-3.0"
publish = false

default-target = "x86_64-unknown-linux-gnu"

[features]
mlsag = [ "mc-crypto-ring-signature" ]
memo = [ "mc-crypto-memo-mac" ]
summary = [ "alloc", "mc-transaction-summary" ]
ident = []

log = [ "dep:log" ]
alloc = [
    "mc-transaction-types/alloc",
    "mc-crypto-digestible/alloc",
    "ledger-mob-apdu/alloc",
]
serde = [ "mc-core/serde", "heapless/serde" ]
noinline = []

std = [
    "thiserror",
#    "ledger-apdu/std",
]
default = [
    "mlsag",
    "memo",
    "summary",
    "ident",
    "std",
    "log",
]

[dependencies]
aes = { version = "0.7.5", default_features = false }
num_enum = { version = "0.5.7", default_features = false }
bitflags = "1.3.2"
byteorder = { version = "1.4.3", default_features = false }
zeroize = { version = "1.5", default_features = false }
log = { version = "0.4.17", default_features = false, optional = true }
heapless = { version = "0.8.0", default_features = false }
hkdf = { version = "0.12.3", default_features = false }
rand_core = { version = "0.6.4", default_features = false, features = [ "getrandom" ] }
strum = { version = "0.24.1", default_features = false, features = [ "derive" ] }
static_assertions = "1.1.0"
encdec = { version = "0.9.0", default_features = false }
thiserror = { version = "1.0.38", optional = true }
emstr = { version = "0.2.0", default_features = false }
prost = { version = "0.11.0", default_features = false, features = [ "prost-derive" ] }
crc = { version = "3.0.0", default_features = false }
curve25519-dalek = { version = "4.1.1", default_features = false, features = [ "zeroize" ] }
ed25519-dalek = { version = "2.0.0-pre.0", default_features = false }
x25519-dalek = { version = "2.0.0-pre.2", default_features = false }
merlin = { version = "3.0.0", default_features = false }
rand_hc = { version = "0.3.2", default_features = false }
schnorrkel-og = { version = "0.11.0-pre.0", default-features = false }
sha2 = { version = "0.10.6", default_features = false }
bs58 = { version = "0.4.0", default_features = false }
const-decoder = "0.3.0"

ledger-mob-apdu = { path = "../apdu", default_features = false }

ledger-proto = { version = "0.1.0", default_features = false }

mc-core = { version = "6", default_features = false, features = [ "internals" ] }
mc-crypto-digestible = { version = "6", default_features = false }
mc-crypto-keys = { version = "6", default_features = false }
mc-crypto-hashes = { version = "6", default_features = false }
mc-crypto-ring-signature = { version = "6", optional = true, default_features = false, features = [ "internals" ] }
mc-crypto-memo-mac = { version = "6", optional = true, default_features = false }
mc-fog-sig-authority = { version = "6", default_features = false }
mc-transaction-types = { version = "6", default_features = false }
mc-transaction-summary = { version = "6", default_features = false, optional = true }
mc-util-from-random = { version = "6", default_features = false }


# used by bulletproofs-og, no_cc feature required for cross compilation
clear_on_drop = { version = "0.2", default-features = false, features = [ "no_cc" ] }

[target.'cfg(target = "nanox")'.dependencies]
portable-atomic = { version = "1.3", default-features = false, features = ["require-cas"] }


[build-dependencies]
prost-build = "0.11.0"
anyhow = "1.0.70"

[dev-dependencies]
anyhow = "1.0.65"
thiserror = "1.0.37"
tiny-bip39 = "1.0"
rand = "0.8.5"
lazy_static = "1.4.0"
log = "0.4.17"
simplelog = { version = "0.12.0", default_features = false }
slip10_ed25519 = { version = "0.1.3", default_features = false }
tokio = { version = "1.20.1", features = [ "full" ] }
async-trait = "0.1.57"


mc-account-keys = { version = "6", default_features = false, features = [ "serde" ] }
mc-api = { version = "6", default_features = false }
mc-util-test-helper = { path = "../vendor/mob/util/test-helper", default_features = false }
ledger-mob-tests = { path = "../tests", default_features = false }
ledger-lib = { version = "0.1.0", default_features =  false }
