
cargo-features = ["per-package-target"]

[package]
name = "ledger-mob-fw"
description = "MobileCoin Ledger NanoApp"
repository = "https://github.com/mobilecoinofficial/ledger-mob.git"
version = "0.10.0"
edition = "2021"
license = "GPL-3.0"
publish = false

[package.metadata.nanos]
name = "MobileCoin"
curve = [ "ed25519" ]
path = [ 
    "44'/866'",
    "13'/",
]
flags = "0"
icon = "assets/mob16x16i.gif"
icon_small = "assets/mob14x14i.gif"
api_level = "1"

[features]
applet = []
mlsag = [ "ledger-mob-core/mlsag" ]
memo = [ "ledger-mob-core/memo" ]
ident = [ "ledger-mob-core/ident" ]
summary = [ "alloc", "ledger-mob-core/summary" ]
pre-release = []

alloc = [ "embedded-alloc", "critical-section", "ledger-mob-core/alloc" ]
noinline = [ "ledger-mob-core/noinline" ]

default = [ "applet", "mlsag", "memo", "alloc", "summary", "ident", "noinline", "pre-release" ]

[dependencies]
nanos_sdk = { git = "https://github.com/LedgerHQ/ledger-nanos-sdk", branch = "master" }
nanos_ui = { git = "https://github.com/LedgerHQ/ledger-nanos-ui", branch = "master" }
ledger-apdu = { path = "../vendor/rs/ledger-apdu", default_features = false }

getrandom = { version = "0.2.7", default_features = false, features = [ "custom" ] }
rand_core = { version = "0.6.3", default_features = false }
hmac-sha512 = { version = "1.1.2", default_features = false }
strum = { version = "0.24.1", default_features = false }
hex_fmt = { version = "0.3.0", default_features = false }
encdec = { version = "0.8.0", default_features = false }
emstr = { version = "0.2.0", default_features = false }
heapless = "*"

mc-core = { version = "4.1.0-pre0", default-features = false }
ledger-mob-core = { path = "../core", default_features = false }

curve25519-dalek = { version = "4.0.0-rc.1", default_features = false }
ed25519-dalek = { version = "2.0.0-pre.0", default_features = false }
x25519-dalek = { version = "2.0.0-pre.2", default_features = false }


libc = "0.2.140"
rlibc = "1.0.0"
embedded-alloc = { version = "0.5.0", optional = true }
critical-section = { version = "1.1.1", optional = true }

# used by bulletproofs-og, no_cc feature required for cross compilation
clear_on_drop = { version = "0.2", default-features = false, features = [ "no_cc" ] }


[build-dependencies]
image = "0.24.3"
anyhow = "1.0.64"
quote = "1.0.21"
chrono = "0.4.23"

[dev-dependencies]

[[bin]]
name = "ledger-mob-fw"
path = "src/main.rs"
required-features = [ "applet" ]


[profile.dev]
#codegen-units = 1
panic = "abort"
debug = true
strip = "none"
split-debuginfo = "off"
opt-level = 'z'
#lto = 'thin'

[profile.release]
codegen-units = 1
panic = "abort"
debug = 2
strip = "none"
split-debuginfo = "off"

opt-level = 'z'
lto = 'fat'


[patch.crates-io]


curve25519-dalek = { git = "https://github.com/dalek-cryptography/curve25519-dalek", rev = "99c0520aa79401b69fb51d38172cd58c6a256cfb" }
ed25519-dalek = { git = "https://github.com/dalek-cryptography/ed25519-dalek.git", rev = "2931c688eb11341a1145e257bc41d8ecbe36277c" }
x25519-dalek = { git = "https://github.com/mobilecoinfoundation/x25519-dalek.git", rev = "4fbaa3343301c62cfdbc3023c9f485257e6b718a" }

# Fork and rename to use "OG" dalek-cryptography.
schnorrkel-og = { git = "https://github.com/mobilecoinfoundation/schnorrkel", rev = "b76d8c3a50671b08af0874b25b2543d3302d794d" }

# Patch-out all instances of ledger-apdu for consistent APIs
ledger-apdu = { path = "../vendor/rs/ledger-apdu" }

# Mobilecoin core patches (replicates workspace level)

mc-account-keys = { path = "../vendor/mob/account-keys" }
mc-core = { path = "../vendor/mob/core" }
mc-crypto-digestible = { path ="../vendor/mob/crypto/digestible" }
mc-crypto-hashes = { path ="../vendor/mob/crypto/hashes" }
mc-crypto-keys = { path ="../vendor/mob/crypto/keys" }
mc-crypto-memo-mac = { path ="../vendor/mob/crypto/memo-mac" }
mc-crypto-ring-signature = { path ="../vendor/mob/crypto/ring-signature" }
mc-fog-sig-authority = { path = "../vendor/mob/fog/sig/authority" }
mc-util-from-random = { path = "../vendor/mob/util/from-random" }
mc-transaction-types = { path ="../vendor/mob/transaction/types" }
mc-transaction-summary = { path ="../vendor/mob/transaction/summary" }
mc-util-serial = { path = "../vendor/mob/util/serial" }

# latest mbedtls needs spin `^0.9.4`, but `mc-util-vec-map` resolves spin to `^0.9.2` through `heapless` `^0.7`,
# This specifies we use the latest version of heapless ~`0.9.4` to solve the dependency constraints. 
heapless = { git = "https://github.com/mobilecoinofficial/heapless", rev = "2726f63bdc767d025f370d88341b1eb785178f2b" }

#rand_core = { path = "../../forks/rand/rand_core" }
rand_hc = { git = "https://github.com/ryankurte/rngs", branch = "hc128-reduce-stack" }

# patch nanos_sdk so nanos_ui uses the same version
# hack to avoid cargo#5478 https://github.com/rust-lang/cargo/issues/5478
[patch."https://github.com/LedgerHQ/ledger-nanos-sdk"]
nanos_sdk = { git = "https://github.com/LedgerHQ/ledger-nanos-sdk?rev=master" }

#[patch."https://github.com/mobilecoinfoundation/curve25519-dalek.git"]
#curve25519-dalek = { path = "../../dalek/curve25519-dalek" }

#[patch."https://github.com/mobilecoinfoundation/ed25519-dalek.git"]
#ed25519-dalek = { path = "../../dalek/ed25519-dalek" }
