cargo-features = ["per-package-target"]

[package]
name = "ledger-sim"
description = "A wrapper around the ledger speculos simulator for use from rust"
repository = "https://github.com/mobilecoinofficial/ledger-mob.git"
version = "0.7.0"
edition = "2021"
license = "Apache-2.0"
publish = false

default-target = "x86_64-unknown-linux-gnu"


[dependencies]
log = "0.4.17"
simplelog = "0.12.0"
bytes = "1.2.1"
strum = { version = "0.24.1", features = [ "derive" ] }
anyhow = "1.0.59"
clap = { version = "3.2.16", features = [ "derive", "env" ] }
tokio = { version = "1.20.1", features = [ "full" ] }
lazy_static = "1.4.0"
bollard = "0.13.0"
async-trait = "0.1.57"
futures = "0.3.24"
tar = "0.4.38"
reqwest = { version = "0.11.13", features = [ "json", "rustls-tls" ], default_features = false }
serde = "1.0.148"
serde_json = "1.0.89"
image = "0.24.5"
