[package]
name = "ledger-mob-tests"
description = "Common tests for MobileCoin hardware wallets"
repository = "https://github.com/mobilecoinofficial/ledger-mob.git"
version = "0.8.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[features]
transport_tcp = [ "ledger-transport-tcp", "ledger-mob/transport_tcp"]
transport_hid = [ "ledger-transport-hid", "hidapi", "ledger-mob/transport_hid" ]
cli = []
default = [ "cli", "transport_tcp", "transport_hid" ]

[dependencies]
log = "0.4.17"
simplelog = "0.12.0"
base64 = "0.21.0"
hex = "0.4.3"
strum = { version = "0.24.1", features = [ "derive" ] }
anyhow = "1.0.59"
clap = { version = "3.2.16", features = [ "derive", "env" ] }
tokio = { version = "1.20.1", features = [ "full" ] }
ctor = "0.1.23"
lazy_static = "1.4.0"
heapless = "0.7.16"
rand = "*"
rand_core = "0.6.3"
serde = "*"
serde_json = "*"
tiny-bip39 = "1.0"

mc-core = { version = "4.0.0", features = [ "bip39" ] }
mc-crypto-keys = { version = "4.0.0", default-features = false }
mc-crypto-ring-signature = { version = "4.0.0", default-features = false, features = [ "internals" ] }
mc-crypto-memo-mac = { version = "4.0.0", default-features = false }
mc-transaction-core = { version = "4.0.0" }
mc-transaction-extra = { version = "4.0.0" }
mc-transaction-signer = { version = "4.0.0" }
mc-transaction-summary = { version = "4.0.0" }

mc-util-from-random = { path = "../vendor/mob/util/from-random", default-features = false }

ledger-mob-apdu = { path = "../apdu" }
ledger-mob = { path = "../lib", default_features = false }

ledger-apdu = { path = "../vendor/rs/ledger-apdu" }
ledger-transport = { path = "../vendor/rs/ledger-transport" }

ledger-transport-hid = { path = "../vendor/rs/ledger-transport-hid", optional = true }
hidapi = { version = "1.4.2", optional = true, default_features = false, features = [ "linux-static-hidraw" ] }
ledger-transport-tcp = { path = "../vendor/rs/ledger-transport-tcp", optional = true }

x25519-dalek = { version = "2.0.0-pre.2", default_features = false, features = ["nightly"] }
curve25519-dalek = { version = "4.0.0-pre.2", default_features = false, features = ["nightly"] }
ed25519-dalek = { version = "2.0.0-pre.1", default_features = false, features = ["nightly"] }


[dev-dependencies]
portpicker = "*"
rand_core = "*"

rand = "0.8.5"
serde = { version = "1.0.144", features = [ "derive" ] }
toml = "0.5.9"
futures = "*"
heapless = "*"

bip32 = { version = "*", features = [ "bip39"] }
tiny-bip39 = "1.0"
tiny-hderive = "0.3.0"
slip10_ed25519 = "0.1.3"
simplelog = "*"

mc-util-test-helper = { path = "../vendor/mob/util/test-helper", default_features = false }

[[bin]]
name = "ledger-mob-tests"
path = "src/main.rs"
required_features = [ "cli" ]


[patch.crates-io]
encdec = { git = "https://github.com/ryankurte/rust-encdec.git", branch = "main" }
